Fix bug where albumIds were duplicated in order array in slice. Add improve styling to player song info, and fix overflow of text

--- a/react-app/src/components/AlbumPlayer/AlbumPlayer.css
+++ b/react-app/src/components/AlbumPlayer/AlbumPlayer.css
@@ -66,9 +66,22 @@
   height: 78%;
 }
 
-.album-player-songs-container::-webkit-scrollbar {
+/* .album-player-songs-container::-webkit-scrollbar {
   display: none;
+} */
+
+.album-player-songs-container::-webkit-scrollbar {
+    background-color: var(--background-main-black)
 }
+
+.album-player-songs-container::-webkit-scrollbar-thumb {
+    background-color: rgb(37, 37, 37);
+    border: 3px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
+
+}
+
 
 .album-player-song-box {
   padding: 2px 45px 2px 25px;
